DevTools: Avoid search bar overflow beyond its parent view
Drive-by: Fix outline disclosure scrolling for the profiler log view and layer tree.

R=pfeldman
BUG=439360
NOTRY=true

Review URL: https://codereview.chromium.org/791953002

git-svn-id: svn://svn.chromium.org/blink/trunk@186946 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/timeline/timelinePanel.css
+++ b/front_end/timeline/timelinePanel.css
@@ -719,6 +719,7 @@
 .layer-tree.outline-disclosure > ol,
 .profiler-log-view > ol {
     margin-left: -12px
+    overflow: auto;
 }
 
 .layer-tree.outline-disclosure ol.children,
